[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/LEDString.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Matrix.tscn" type="PackedScene" id=3]

[node name="Main" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 1761.41, 360.0, 90.0, 270.0, 180.0 ],
"_edit_vertical_guides_": [ 540.0, 1080.0, 0.0 ]
}

[node name="Title" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_right = 390.0
margin_bottom = 23.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "ANCS BT"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="ConnBtn" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_top = 105.0
margin_right = 450.0
margin_bottom = 125.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Connect"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="LEDA" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = 210.0
margin_right = 75.0
margin_bottom = 233.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "LEDA"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="LEDA" parent="LEDA" index="0" instance=ExtResource( 2 )]

margin_left = 8.0
margin_top = 75.0
margin_right = 1028.0
margin_bottom = 1498.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="LEDA" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 211.0
margin_top = 51.0
margin_right = 287.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "LED STRIP A"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LEDB" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 165.0
margin_top = 210.0
margin_right = 225.0
margin_bottom = 233.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "LEDB"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="LEDB" parent="LEDB" index="0" instance=ExtResource( 2 )]

visible = false
margin_left = -67.0
margin_top = 75.0
margin_right = 953.0
margin_bottom = 1475.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="LEDB" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 156.0
margin_top = 51.0
margin_right = 226.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "LED Strip B"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LEDX" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 315.0
margin_top = 210.0
margin_right = 375.0
margin_bottom = 233.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "LEDALL"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="LEDX" parent="LEDX" index="0" instance=ExtResource( 2 )]

visible = false
margin_left = -142.0
margin_top = 75.0
margin_right = 878.0
margin_bottom = 1475.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="LEDX" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 51.0
margin_right = 181.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "LED ALL Strips"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MATA" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 465.0
margin_top = 210.0
margin_right = 525.0
margin_bottom = 233.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "MATA"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="MATA" parent="MATA" index="0" instance=ExtResource( 3 )]

visible = false
margin_left = -217.0
margin_top = 75.0
margin_right = 803.0
margin_bottom = 1578.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="MATA" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 53.0
margin_right = 48.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Matrix A"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MATB" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 615.0
margin_top = 210.0
margin_right = 675.0
margin_bottom = 233.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "MATB"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="MATB" parent="MATB" index="0" instance=ExtResource( 3 )]

visible = false
margin_left = -292.0
margin_top = 75.0
margin_right = 728.0
margin_bottom = 1578.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="MATB" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -52.0
margin_top = 53.0
margin_right = -12.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "MAtrix B"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MATC" type="Button" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 765.0
margin_top = 210.0
margin_right = 825.0
margin_bottom = 233.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "MATC"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="MATC" parent="MATC" index="0" instance=ExtResource( 3 )]

visible = false
margin_left = -367.0
margin_top = 75.0
margin_right = 653.0
margin_bottom = 1578.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="MATC" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -142.0
margin_top = 53.0
margin_right = -102.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "MATRIX C"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MATX" type="Button" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 915.0
margin_top = 210.0
margin_right = 990.0
margin_bottom = 233.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "MAT ALL"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="MATX" parent="MATX" index="0" instance=ExtResource( 3 )]

visible = false
margin_left = -442.0
margin_top = 75.0
margin_right = 578.0
margin_bottom = 1578.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="MATX" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -232.0
margin_top = 53.0
margin_right = -140.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "ALL MATRIX"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="toggled" from="LEDA" to="." method="_on_LEDA_toggled"]

[connection signal="toggled" from="LEDB" to="." method="_on_LEDB_toggled"]

[connection signal="toggled" from="LEDX" to="." method="_on_LEDX_toggled"]

[connection signal="toggled" from="MATA" to="." method="_on_MATA_toggled"]

[connection signal="toggled" from="MATB" to="." method="_on_MATB_toggled"]

[connection signal="toggled" from="MATC" to="." method="_on_MATC_toggled"]

[connection signal="toggled" from="MATX" to="." method="_on_MATX_toggled"]


